@@ -64,6 +64,7 @@
     <Compile Include="AdaptingNameValueCollectionsTestCase.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="DictionaryAdapterFactoryTestCase.cs" />
+    <Compile Include="TestDictionaryValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{B4F97281-0DBD-4835-9ED8-7DFB966E87FF}" />
