@@ -15,35 +15,34 @@
 namespace Castle.Components.DictionaryAdapter
 {
 	using System;
-	using System.Collections;
-	using System.Collections.Generic;
+	using System.ComponentModel;
 
-	public interface IDictionaryAdapter
+	public abstract partial class DictionaryAdapterBase : IDataErrorInfo
 	{
-		Type Type { get; }
+		public IDictionaryValidator Validator { get; set; }
 
-		bool IsEditing { get; }
+		string IDataErrorInfo.Error
+		{
+			get
+			{
+				if (Validator != null)
+				{
+					return Validator.Validate(this);
+				}
+				return String.Empty;
+			}
+		}
 
-		bool WantsPropertyChangeNotification { get; }
-
-		IDictionary State { get; }
-
-		IDictionary Dictionary { get; }
-
-		PropertyDescriptor Descriptor { get; }
-
-		IDictionary<String, PropertyDescriptor> Properties { get; }
-
-		IDictionaryAdapterFactory Factory { get; }
-
-		IDictionaryValidator Validator { get; set; }
-
-		object GetProperty(string propertyName);
-
-		T GetTypedProperty<T>(string propertyName);
-
-		bool SetProperty(string propertyName, ref object value);
-
-		void FetchProperties();
+		string IDataErrorInfo.this[String columnName]
+		{
+			get
+			{
+				if (Validator != null)
+				{
+					return Validator.Validate(this, columnName);
+				}
+				return String.Empty;
+			}
+		}
 	}
 }
